frontend/test/should_fail/cast_string_int_exec.grg
using cast_model;

rule r {
	modify {
	---
		def var i:int;
		exec ({
			i = (int)"bazqux"
		});
	}
}
